<resources>
    //english values
    <string name="app_name">CRUDDY Pizza Ordering App</string>
    <string name="incorrectLoginEN">Incorrect login.</string>
    <string name="welcomeMessageEN">Welcome to CRUDDY Pizza!</string>
    <string name="loginTextEN">Enter Login</string>
    <string name="loginButtonTextEN">Login!</string>
    <string name="createAccountTextEN">Create Account!</string>
    <string name="bottomCopyrightTextEN">2023, NSCC Software.</string>
    <string name="welcomeUserTextEN">Welcome </string>
    <string name="createOrderTextEN">Create Order!</string>
    <string name="modifyOrderTextEN">Modify order</string>
    <string name="viewOrderTextEN">View order history</string>
    <string name="frenchLabel">Français</string>
    <string name="logoutTextEN">Logout</string>
    <string name="createAccountScreenTextEN">Create Account</string>
    <string name="loginExistsEN">Login already taken</string>
    <string name="asteriskSymbolEN">*</string>
    <string name="firstNameCreateTextEN">First Name</string>
    <string name="lastNameCreateTextEN">Last Name</string>
    <string name="loginCreateEN">Login</string>
    <string name="makePizzaTextEN">Make your pizza!</string>
    <string name="sizePromptTextEN">Select Size</string>
    <string name="sizeSmallTextEN">Small</string>
    <string name="sizeMediumTextEN">Medium</string>
    <string name="sizeLargeTextEN">Large</string>
    <string name="toppingOnePromptEN">Topping #1</string>
    <string name="toppingTwoPromptEN">Topping #2</string>
    <string name="toppingThreePromptEN">Topping #3</string>
    <string name="pepperoniTextEN">Pepperoni</string>
    <string name="sausageTextEN">Sausage</string>
    <string name="baconTextEN">Bacon</string>
    <string name="tomatoTextEN">Cherry Tomatoes</string>
    <string name="confirmOrderTextEN">CONFIRM ORDER</string>
    <string name="orderDeletedEN">Order deleted.</string>
    <string name="backTextEN">Back</string>
    <string name="orderConfirmedTextEN">Order Confirmed!</string>
    <string name="orderIdPromptTextEN">Order ID:</string>
    <string name="defaultOrderIDEN">01</string>
    <string name="orderDatePromptTextEN">Order Date:</string>
    <string name="defaultOrderDateTextEN">01/01/2023</string>
    <string name="pizzaSizePromptTextEN">Pizza Size:</string>
    <string name="toppingsPromptTextEN">Toppings:</string>
    <string name="mainMenuTextEN">Main Menu</string>
    <string name="orderHistoryTextEN">Order History:</string>
    <string name="medAbreviationEN">MED</string>
    //end english values
    //french values

    <string name="createOrderTextFR">Créer une commande !</string>
    <string name="incorrectLoginFR">Créer une commande !</string>
    <string name="viewOrderTextFR">Voir l\'historique des commandes</string>
    <string name="welcomeUserTextFR">user here</string>
    <string name="app_nameFR">Application de commande de pizza CRUDDY</string>
    <string name="welcomeMessageFR">Bienvenue chez CRUDDY Pizza !</string>
    <string name="loginTextFR">Entrez votre identifiant</string>
    <string name="loginButtonTextFR">Connexion !</string>
    <string name="createAccountTextFR">Créer un compte !</string>
    <string name="englishLabel">English</string>
    <string name="logoutTextFR">Déconnexion</string>
    <string name="createAccountScreenTextFR">Créer un compte</string>
    <string name="loginExistsFR">Nom d\'utilisateur déjà pris</string>
    <string name="asteriskSymbolFR">*</string>
    <string name="firstNameCreateTextFR">Prénom</string>
    <string name="lastNameCreateTextFR">Nom de famille</string>
    <string name="loginCreateFR">Identifiant</string>
    <string name="makePizzaTextFR">Créez votre pizza !</string>
    <string name="sizePromptTextFR">Sélectionnez la taille</string>
    <string name="sizeSmallTextFR">Petite</string>
    <string name="sizeMediumTextFR">Moyenne</string>
    <string name="sizeLargeTextFR">Grande</string>
    <string name="toppingOnePromptFR">Garniture #1</string>
    <string name="toppingTwoPromptFR">Garniture #2</string>
    <string name="toppingThreePromptFR">Garniture #3</string>
    <string name="pepperoniTextFR">Pepperoni</string>
    <string name="sausageTextFR">Saucisse</string>
    <string name="baconTextFR">Bacon</string>
    <string name="tomatoTextFR">Tomates cerises</string>
    <string name="confirmOrderTextFR">CONFIRMER LA COMMANDE</string>
    <string name="orderDeletedFR">Commande supprimée.</string>
    <string name="backTextFR">Retour</string>
    <string name="orderConfirmedTextFR">Commande confirmée !</string>
    <string name="orderIdPromptTextFR">ID de commande :</string>
    <string name="defaultOrderIDFR">01</string>
    <string name="orderDatePromptTextFR">Date de commande :</string>
    <string name="defaultOrderDateTextFR">01/01/2023</string>
    <string name="pizzaSizePromptTextFR">Taille de la pizza :</string>
    <string name="toppingsPromptTextFR">Garnitures :</string>
    <string name="mainMenuTextFR">Menu principal</string>
    <string name="orderHistoryTextFR">Historique des commandes :</string>
    <string name="medAbreviationFR">MOY</string>
    <string name="bottomCopyrightTextFR">2023, NSCC logiciel.</string>
    <string name="sizeMediumShortEN">MED</string>
    <string name="sizeSmallShortEN">SML</string>
    <string name="sizeLargeShortEN">LG</string>
    <string name="confirmEditText">Confirm Edit</string>
    <string name="modifyOrderTextFR">Modifier la commande</string>
    //end french values
</resources>