<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="412dp"
        android:layout_height="0dp"
        android:background="#302B2B"
        android:padding="5dp"
        android:shrinkColumns="1,2,3"
        android:stretchColumns="1,2,3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/topRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcomeUserTextView"
                android:layout_width="404dp"
                android:layout_height="300dp"
                android:gravity="center"
                android:text="@string/welcomeMessageEN"
                android:textAlignment="center"
                android:textColor="#0D1117"
                android:textSize="32sp" />

        </TableRow>

        <TableRow
            android:id="@+id/createOrderRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp">

            <EditText
                android:id="@+id/loginEditText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="#C2B4B4"
                android:ems="10"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/loginTextEN" />

        </TableRow>

        <TableRow
            android:id="@+id/loginButtonRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="100dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:backgroundTint="#7E4C9E"
                android:text="@string/loginButtonTextEN" />
        </TableRow>

        <TableRow
            android:id="@+id/createAccountButtonRow"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:backgroundTint="#D54242"
                android:text="@string/createAccountTextEN" />
        </TableRow>

        <TableRow
            android:id="@+id/bottomTextRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="60dp">

            <TextView
                android:id="@+id/bottomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bottomCopyrightTextEN"
                android:textColor="#7E4C9D"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/orderHistoryChangeLanguageButton"
        android:layout_width="115dp"
        android:layout_height="59dp"
        android:layout_marginStart="300dp"
        android:backgroundTint="#D44242"
        android:text="@string/frenchLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>