<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderCreation">

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#302B2B"
        android:shrinkColumns="1,2,3"
        android:stretchColumns="1,2,3">

        <TableRow
            android:id="@+id/headerTextRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/orderCreationTopTextView"
                android:layout_width="404dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:text="@string/makePizzaTextEN"
                android:textColor="#D01F3C"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:id="@+id/sizeTextRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sizePromptTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sizePromptTextEN"
                android:textColor="#EFEFEF"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/sizeSpinnerRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/sizeSpinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#C1B3B3"
                android:entries="@array/sizeOptionsEnglish"
                android:prompt="@string/app_name"
                android:spinnerMode="dropdown" />

        </TableRow>

        <TableRow
            android:id="@+id/toppingOneTextRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toppingOnePromptTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/toppingOnePromptEN"
                android:textColor="#EFEFEF"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/toppingOneSpinnerRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/toppingOneSpinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#C1B3B3"
                android:entries="@array/toppingsEnglish"
                android:prompt="@string/app_name"
                android:spinnerMode="dropdown" />

        </TableRow>

        <TableRow
            android:id="@+id/toppingTwoRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toppingTwoPromptTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/toppingTwoPromptEN"
                android:textColor="#EFEFEF"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/toppingTwoSpinnerRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/toppingTwoSpinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#C1B3B3"
                android:entries="@array/toppingsEnglish"
                android:prompt="@string/app_name"
                android:spinnerMode="dropdown" />

        </TableRow>

        <TableRow
            android:id="@+id/toppingThreePromptRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toppingThreePromptTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/toppingThreePromptEN"
                android:textColor="#EFEFEF"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/toppingThreeSpinnerRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/toppingThreeSpinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#C1B3B3"
                android:entries="@array/toppingsEnglish"
                android:prompt="@string/app_name"
                android:spinnerMode="dropdown" />
        </TableRow>

        <TableRow
            android:id="@+id/confirmOrderButtonRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/confirmOrderButton"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:backgroundTint="#CF1F3C"
                android:gravity="center"
                android:text="@string/confirmOrderTextEN"
                android:textSize="23sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:backgroundTint="#CE1F3C"
        android:text="@string/backTextEN"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/orderHistoryChangeLanguageButton"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:layout_marginStart="295dp"
        android:backgroundTint="#CF1F3C"
        android:text="@string/frenchLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>