<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#302B2B"
        android:padding="5dp"
        android:shrinkColumns="1,2,3"
        android:stretchColumns="1,2,3">

        <TableRow
            android:id="@+id/topRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/welcomeUserTextView"
                android:layout_width="404dp"
                android:layout_height="200dp"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/welcomeUserTextEN"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

        </TableRow>

        <TableRow
            android:id="@+id/createOrderRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="140dp">

            <Button
                android:id="@+id/createOrderButton"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:backgroundTint="#D11F3C"
                android:text="@string/createOrderTextEN"
                android:textSize="23sp" />
        </TableRow>

        <TableRow
            android:id="@+id/loginButtonRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp" />

        <TableRow
            android:id="@+id/orderHistoryRow"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <Button
                android:id="@+id/viewOrderHistoryButton"
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:backgroundTint="#7E4C9F"
                android:text="@string/viewOrderTextEN"
                android:textSize="15sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/mainMenuChangeLanguageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#D01F3C"
        android:gravity="center"
        android:text="@string/frenchLabel"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-400dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="298dp"
        android:autoSizeMaxTextSize="15sp"
        android:autoSizeMinTextSize="4sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#7E4C9E"
        android:text="@string/logoutTextEN"
        android:textSize="15sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>