<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderHistory">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#302B2B"
        android:shrinkColumns="1,2,3"
        android:stretchColumns="1,2,3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/historyHeaderRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="50dp">

            <TextView
                android:id="@+id/orderHistoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_span="3"
                android:gravity="center|start"
                android:text="@string/orderHistoryTextEN"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:id="@+id/OrderHistoryRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderHistoryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3" >

            </androidx.recyclerview.widget.RecyclerView>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/orderHistoryChangeLanguageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:backgroundTint="#F44336"
        android:text="@string/frenchLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#D01F3C"
        android:text="@string/backTextEN"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>